# ur5_sbpl_interface_config

./: CMakeLists.txt  package.xml  planning_example.yaml
config/: collision_detection.yaml  sbpl_planning.yaml  ur5.mprim
launch/: demo.launch  move_group.launch  move_group_picking.launch  move_group_stowage.launch  move_group_ur10_modified_picking.launch  move_group_ur10_modified_picking.launch~  move_group_ur10_picking.launch~  move_group_ur5.launch  moveit_rviz.launch  moveit_rviz_ur5.launch  moveit_ur5.launch  sbpl_planning_pipeline.launch  sbpl_planning_pipeline.launch.xml
