<?xml version="1.0"?>
<package>
    <name>ur5_sbpl_interface_config</name>
    <version>0.0.0</version>
    <description>The ur5_sbpl_interface_config package</description>

    <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>
